--- a/src/prototype-flax/Content/Settings/Layers And Tags Settings.json
+++ b/src/prototype-flax/Content/Settings/Layers And Tags Settings.json
@@ -4,8 +4,10 @@
 	"EngineBuild": 6404,
 	"Data": {
 	"Tags": [
+		"Asteroid",
 		"Collectible",
 		"Collectible.Resource",
+		"GrapplingHook",
 		"Player"
 	],
 	"Layers": [
