--- a/src/prototype-flax/Content/Settings/Layers And Tags Settings.json
+++ b/src/prototype-flax/Content/Settings/Layers And Tags Settings.json
@@ -1,7 +1,7 @@
 {
 	"ID": "08dbe1dd013d264a071d8e9506bdfa3f",
 	"TypeName": "FlaxEditor.Content.Settings.LayersAndTagsSettings",
-	"EngineBuild": 6404,
+	"EngineBuild": 6406,
 	"Data": {
 	"Tags": [
 		"Asteroid",
@@ -14,7 +14,7 @@
 		"Player",
 		"Asteroid",
 		"Collectible",
-		null,
+		"LevelLogic",
 		null,
 		null,
 		null,
